fixed homepage text align issue

--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -182,7 +182,7 @@
     flex-direction: column;
   }
   .collection-item-text {
-    max-width: 200px;
+    /* max-width: 200px; */
     display: flex;
     flex-wrap: wrap;
     font-size: 20px;
